--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
+platform = espressif32
+board = denky32
 framework = arduino
 lib_deps = 
 	yiannisbourkelis/Uptime Library@^1.0.0
