--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
+[env:esp32dev]
 platform = espressif32
-board = denky32
+board = esp32dev
 framework = arduino
-lib_deps = 
-	yiannisbourkelis/Uptime Library@^1.0.0
-	robtillaart/DHTNEW@^0.5.3
-	knolleary/PubSubClient@^2.8
-	bblanchon/ArduinoJson@^7.4.1
+monitor_speed = 115200
+lib_deps =
+  bblanchon/ArduinoJson
+  knolleary/PubSubClient
+  sstaub/Uptime Library
+  robtillaart/DHTNEW
