--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:denky32]
 platform = espressif32
-board = esp32dev
-framework = arduino
+board = denky32
 monitor_speed = 115200
-lib_deps =
-  bblanchon/ArduinoJson
-  knolleary/PubSubClient
-  sstaub/Uptime Library
-  robtillaart/DHTNEW
+upload_speed = 921600
+framework = arduino
+lib_deps = 
+	bblanchon/ArduinoJson
+	knolleary/PubSubClient
+	robtillaart/DHTNEW
