+OTA in platrformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,9 @@ lib_deps =
 	bblanchon/ArduinoJson
 	knolleary/PubSubClient
 	robtillaart/DHTNEW
+upload_protocol = espota
+upload_port     = 10.249.249.117       ; IP вашего ESP (или myesp.local) :contentReference[oaicite:0]{index=0}
+#upload_flags =
+#    --port=3232                     ; порт на ESP для OTA (по умолчанию 3232) :contentReference[oaicite:1]{index=1}
+#    --auth=мой_OTA_пароль           ; если в скетче задан пароль :contentReference[oaicite:2]{index=2}
+#    --host_port=50000    
